--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
     <body>
   <body>
     <div class="page-header">
+        <a href="{% url "blog.views.post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
         <h1><a href="/">Django Girls Blog</a></h1>
     </div>
     <div class="content container">
@@ -23,3 +24,4 @@
 </body>
     </body>
 </html>
+
